# Ak_lab_4

./: .gitignore  README.md  common.py  file.txt  pyproject.toml
.github/workflows/: ci.yml
golden/: cat.yml  double_precision.lisp  double_precision.yml  factorial.yml  gen_golden.py  hello.yml  hello_user_name.lisp  hello_user_name.yml  prob2.yml  sort.yml  test_golden.py
machine/: ALU.py  CU.py  Instruct.py  datapath.py  processor.py  stack.py
sources/: cat.lisp  double_precision.lisp  factorial.lisp  hello.lisp  prob2.lisp  sort.lisp
utils/: compiler.py  isa.py  lexer.py
